# rag_research

./: .exclude.list  .gitignore  README.md  importT2Ranking2ES.py  main.py  pyproject.toml
datasets/: readme.md
datasets/miracl/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
datasets/miracl/miracl/: assets.py  bge_m3_eval.py  definitions.py  enron.py  hotpotqa.py  hotpotqa_eval.py  qwen3_eval.py  qwen3_vl_eval.py  toutiao_news.py
es/: README.MD  docker-compose.elk.yml  rest.md
es/logstash/pipeline/: logstash.conf
notebooks/: tiktoken.ipynb
prompts/: similarity_checker.md
scripts/: es_mapping.json  ingest_to_es.py  ingest_toutiao_to_es.py  parse_toutiao.py
speed_of_light/: Exp1.ipynb  Notebook.ipynb  Scientific Facts Test Doc.md  readme.md  target_section.md  texts.json
src/: inmemory_rag.py
title_search/: report_template.html  requirements.txt  semantic_search.py  test_cases.json  titles.json
