[project]
name = "rag-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "datasets>=4.4.0",
    "elasticsearch>=9.2.0",
    "faiss-cpu>=1.12.0",
    "ipywidgets>=8.1.8",
    "jupyterlab-widgets>=3.0.16",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pymilvus[milvus-lite]>=2.6.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "taskipy>=1.14.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.0",
]

[project.scripts]
# Installable console scripts that point to the two helper scripts in `scripts/`.
# After `pip install .` you can run `parse-toutiao` and `ingest-to-es`.
parse-toutiao = "scripts.parse_toutiao:main"
ingest-to-es = "scripts.ingest_to_es:main"

# mirrors
[tool.uv] # for uv sync, https://github.com/astral-sh/uv/issues/6925#issuecomment-2324110095
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
[pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
