[project]
name = "miracl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-cloud",
    "datasets==3.6.0",
    "huggingface_hub",
    "pyarrow",
    "pandas",
    "dagit>=1.12.8",
    "dagster-cli>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "miracl.definitions"
code_location_name = "miracl"

[tool.setuptools.packages.find]
exclude=["miracl_tests"]
